--- a/src/templates/stats.html
+++ b/src/templates/stats.html
@@ -25,7 +25,7 @@
 
     <h2>View previous inference requests</h2>
     <label for="outputValue">Enter animal category:</label>
-    <input type="text" id="outputValue" name="output"><br><br>
+    <input type="text" id="outputValue" name="output" value = "Dog"><br><br>
     <button onclick="fetchData()">Get Data</button>
     <div id="dataTable"></div>
 
