--- a/src/templates/infer_gimages.html
+++ b/src/templates/infer_gimages.html
@@ -30,6 +30,7 @@
             <select name="model" id="model" style="width: 150px;">
                 <option value="resnet">resnet</option>
                 <option value="vit">vit</option>
+                <option value="clip">clip</option>
                 <option value="resnet_svm">resnet_svm</option>
                 <option value="vit_svm">vit_svm</option>
                 <option value="resnet_xgb">resnet_xgb</option>
